# WuppieFuzz-dashboard

./: Cargo.toml  README.md  compose.yaml  dist-workspace.toml  grafana.ini
.github/workflows/: release.yml  sigrid-publish.yml  sigrid-pullrequest.yml
provisioning/dashboards/: default.yaml  home.json  requestsresponses.json
provisioning/datasources/: datasource.yaml
provisioning/plugins/: sqlite_plugin.yaml
src/: cli.rs  docker_util.rs  embed_files.rs  main.rs
wix/: main.wxs
